# reranker-simple-benchmark

./: pyproject.toml  retrieve_bm25_with_tokenize.py
eval/: __init__.py  evaluate_reranker.py  leaderboard_bm25.py  leaderboard_reranker.py  wrappers.py
eval/results/stage1/bm25_Kiwi/: AutoRAGRetrieval.json  BelebeleRetrieval.json  Ko-StrategyQA.json  PublicHealthQA.json  model_meta.json
eval/results/stage1/bm25_Kkma/: AutoRAGRetrieval.json  BelebeleRetrieval.json  Ko-StrategyQA.json  PublicHealthQA.json
eval/results/stage1/bm25_Mecab/: AutoRAGRetrieval.json  BelebeleRetrieval.json  Ko-StrategyQA.json  PublicHealthQA.json  model_meta.json
eval/results/stage1/bm25_Okt/: AutoRAGRetrieval.json  BelebeleRetrieval.json  Ko-StrategyQA.json  PublicHealthQA.json  model_meta.json
eval/results/stage1/top_1k_qrels/: BelebeleRetrieval_id.jsonl  MIRACLRetrieval_id.jsonl  MultiLongDocRetrieval_id.jsonl  PublicHealthQA_id.jsonl
eval/results/stage2/Alibaba-NLP/gte-multilingual-reranker-base/no_model_name_available/no_revision_available/: AutoRAGRetrieval.json  BelebeleRetrieval.json  Ko-StrategyQA.json  MIRACLRetrieval.json  MrTidyRetrieval.json  MultiLongDocRetrieval.json  PublicHealthQA.json  XPQARetrieval.json
eval/results/stage2/BAAI/bge-reranker-v2-gemma/no_model_name_available/no_revision_available/: AutoRAGRetrieval.json  BelebeleRetrieval.json  Ko-StrategyQA.json  MIRACLRetrieval.json  MrTidyRetrieval.json  PublicHealthQA.json  XPQARetrieval.json
eval/results/stage2/BAAI/bge-reranker-v2-m3/no_model_name_available/no_revision_available/: AutoRAGRetrieval.json  (+7 more)
(+79 files in other folders)
