[project]
name = "reranker-simple-benchmark"
version = "0.1.0"
description = "https://instruct.kr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s==0.2.12",
    "flagembedding>=1.3.5",
    "kiwipiepy==0.19.0",
    "konlpy==0.6.0",
    "mteb==1.38.1",
    "mxbai-rerank>=0.1.6",
    "sentence-transformers==4.1.0",
    "setproctitle>=1.3.7",
    "streamlit==1.39.0",
    "torch>=2.5.1",
]
